# GraphColoringABC

./: CMakeLists.txt  main.cpp
AlgorithmABC/: AlgorithmABC.cpp  AlgorithmABC.h
Graph/: Graph.cpp  Graph.h
Node/: Node.cpp  Node.h
RandomGenerator/: RandomGenerator.cpp  RandomGenerator.h
